--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <img src="img/fotowisudabersama.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100" />
           <img src="img/hariguru.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300" />
           <img src="img/persegibikinpopmie.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500" />
-          <img src="img/IMG-20221030-WA0026.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="700" />
+          <img src="" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="700" />
           <img src="img/WhatsApp Image 2022-12-15 at 12.53.45 (1).jpeg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="900" />
           <img src="img/WhatsApp Image 2022-11-10 at 14.31.47(2).jpeg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="1100" />
           <img src="img/wisuda.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="1300" />
